fix color contrast and navbar button aria-label

--- a/assets/carrousel.css
+++ b/assets/carrousel.css
@@ -30,7 +30,7 @@
 #carousel-1:checked ~ .control-1 ~ .carousel-indicators li:nth-child(1) .carousel-bullet,
 #carousel-2:checked ~ .control-2 ~ .carousel-indicators li:nth-child(2) .carousel-bullet,
 #carousel-3:checked ~ .control-3 ~ .carousel-indicators li:nth-child(3) .carousel-bullet {
-  color: #48bb78;  /* Set to match the Tailwind colour you want the active one to be */
+  color: #195d3e;  /* Set to match the Tailwind colour you want the active one to be */
 }
 
 .color-gray {
